<resources>
    <string name="app_name">ObjectiaAcademyDemo</string>
    <string name="hint_username">Enter your username here</string>
    <string name="hint_password">Enter your password here</string>
    <string name="remember_me">Remember me</string>
    <string name="create_my_account">Create My Account</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me_checked">Remember me checked!</string>
    <string name="remember_me_unchecked">Remember me unchecked</string>
    <string name="sign_in_clicked">Sign In Clicked</string>
    <string name="sign_up_clicked">Sign Up Clicked</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_input">Please enter a username and password.</string>
    <string name="invalid_username_length">Username should be at least 3 characters.</string>
    <string name="welcome">Welcome %s</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="title_list_users">Below are the users of the app.</string>
    <string name="title_details">Below are the details of the %s</string>
    <string name="username_exists">Username already exists</string>
    <string name="user_not_registered">User is not registered</string>
</resources>