<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:background="@drawable/background_rounded"
        android:padding="16dp"
        android:textColor="@color/colorAccent"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:elevation="6dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/hint_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:elevation="6dp"
        android:background="@drawable/background_rounded"
        app:layout_constraintEnd_toEndOf="@+id/editText_username"
        app:layout_constraintStart_toStartOf="@+id/editText_username"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView_already_a_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/already_a_member"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
        app:layout_constraintStart_toStartOf="@+id/button_sign_up" />

    <TextView
        android:id="@+id/textView_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textView_already_a_member"
        app:layout_constraintStart_toEndOf="@+id/textView_already_a_member" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_my_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>